--- a/app/shared/app.global.css
+++ b/app/shared/app.global.css
@@ -4,6 +4,28 @@ body {
   background: #f1f0ee;
 }
 
+.ui.top.aligned.page.modals {
+  padding-top: 3em;
+}
+
+.prompt-header .ui.steps .step {
+  padding: 0.5em 1.5em;
+}
+
+.prompt-header img {
+  height: 48px;
+  padding: 4px;
+}
+
+.prompt-header .ui.small.header {
+  font-size: 1em;
+}
+
+.prompt-header .ui.statistic>.value,
+.prompt-header .ui.statistics .statistic>.value {
+  font-size: 48px !important;
+}
+
 .ui.table.overview {
   border: 1px solid rgba(34,36,38,.15);
   border-left: 0;
