--- a/app/shared/app.global.css
+++ b/app/shared/app.global.css
@@ -10,7 +10,7 @@ body {
 
 .modals.dimmer .ui.scrolling.modal,
 .modals.dimmer[class*="top aligned"] .modal {
-  margin: 12vh auto;
+  /* margin: 12vh auto; */
 }
 
 .prompt-header .ui.steps .step {
@@ -51,19 +51,24 @@ body {
   z-index: 1001;
 }
 
-.ui.labeled.icon.menu.nav-sidebar {
+.ui.vertical.menu.nav-sidebar {
   border: none;
   border-right: 1px solid rgba(34,36,38,.15);
   border-radius: 0;
   height: 100vh;
 }
-.ui.labeled.icon.menu.nav-sidebar > .item {
+.ui.vertical.menu.nav-sidebar > .item {
   border: none;
-  min-width: 4em;
+  /* min-width: 3em; */
 }
 
-.ui.labeled.icon.menu.nav-sidebar > .item img {
+.ui.vertical.menu.nav-sidebar > .item img {
   max-width: 4em;
+}
+
+.ui.vertical.menu.nav-sidebar .ui.tiny.basic.icon.button:focus,
+.ui.vertical.menu.nav-sidebar .ui.tiny.basic.icon.button:hover {
+  background: transparent !important;
 }
 
 .table tbody.visible.transition {
