--- a/app/shared/app.global.css
+++ b/app/shared/app.global.css
@@ -12,6 +12,29 @@ body {
   display: table-row !important;
 }
 
+table tr .jurisdiction-row {
+  padding: 0 !important;
+  border: 0 !important;
+}
+
+table .jurisdiction-table {
+  border-left: 0 !important;
+  border-bottom: 0 !important;
+  border-right:  0 !important;
+  border-top: 0 !important;
+}
+
+.table-scroll {
+  overflow-y: auto;
+  max-height: 200px;
+}
+
+.ui.table thead tr:first-child > th {
+  position: sticky !important;
+  top: 0;
+  z-index: 2;
+}
+
 .ui.progress .bar {
   min-width: 0;
 }
