--- a/app/shared/app.global.css
+++ b/app/shared/app.global.css
@@ -24,11 +24,6 @@ table .jurisdiction-table {
   border-top: 0 !important;
 }
 
-table thead .no-jurisdiction {
-  border-bottom: 0 !important;
-  text-align: center !important;
-}
-
 .table-scroll {
   overflow-y: auto;
   max-height: 200px;
@@ -41,6 +36,10 @@ table thead .no-jurisdiction {
 
 .confirm-wrapper {
   word-break: break-all;
+}
+
+.jurisdiction-button:hover {
+  background-color: grey !important;
 }
 
 .jurisdiction-wrapper-name {
@@ -83,12 +82,6 @@ div.visible.menu.transition>div.item>span.text {
   overflow: hidden;
   text-overflow: ellipsis;
   display: inline-block;
-}
-
-.ui.table thead tr:first-child > th {
-  position: sticky !important;
-  top: 0;
-  z-index: 2;
 }
 
 .ui.progress .bar {
