moved button in history added missing header cell

--- a/app/shared/app.global.css
+++ b/app/shared/app.global.css
@@ -57,6 +57,15 @@ table .jurisdiction-table {
   background-color: grey !important;
 }
 
+.jurisdiction-history-button:hover {
+  background-color: grey !important;
+}
+
+.jurisdiction-history-button {
+  display: block !important;
+  margin: auto !important;
+}
+
 .jurisdiction-wrapper-name {
   display: inline-block;
   width: 150px;
