--- a/app/shared/app.global.css
+++ b/app/shared/app.global.css
@@ -21,21 +21,21 @@ span.nil {
   font-size: 1em;
 }
 
-.prompt-header .ui.statistic>.value,
-.prompt-header .ui.statistics .statistic>.value {
+.prompt-header .ui.statistic > .value,
+.prompt-header .ui.statistics .statistic > .value {
   font-size: 48px !important;
 }
 
 .ui.table.overview {
-  border: 1px solid rgba(34,36,38,.15);
+  border: 1px solid rgba(34, 36, 38, 0.15);
   border-left: 0;
 }
 
 .ui.table.overview thead tr th:first-child:not(.ignored),
 .ui.table.overview tbody tr td:first-child:not(.ignored) {
-  background: rgb(248,248,248);
-  border-left: 1px solid rgba(34,36,38,.1);
-  border-right: 1px solid rgba(34,36,38,.1);
+  background: rgb(248, 248, 248);
+  border-left: 1px solid rgba(34, 36, 38, 0.1);
+  border-right: 1px solid rgba(34, 36, 38, 0.1);
   position: -webkit-sticky;
   position: sticky;
   left: 0;
@@ -47,18 +47,23 @@ span.nil {
 }
 
 .ui.vertical.menu.nav-sidebar {
+  background: #383633 !important;
   border: none;
-  border-right: 1px solid rgba(34,36,38,.15);
+  border-right: 1px solid rgba(34, 36, 38, 0.15);
   border-radius: 0;
   height: 100vh;
 }
+
 .ui.vertical.menu.nav-sidebar > .item {
   border: none;
-  /* min-width: 3em; */
 }
 
 .ui.vertical.menu.nav-sidebar > .item img {
   max-width: 4em;
+}
+
+.ui.vertical.pointing.menu.nav-sidebar .active.item:after {
+  background: #f1f0ee !important;
 }
 
 .ui.vertical.menu.nav-sidebar .ui.tiny.basic.icon.button:focus,
@@ -80,7 +85,7 @@ span.nil {
 
 .ui.grey.button {
   background-color: #e0e1e2;
-  color: rgba(0,0,0,.6);
+  color: rgba(0, 0, 0, 0.6);
 }
 
 .input-range__slider {
@@ -97,72 +102,94 @@ span.nil {
   position: absolute;
   top: 50%;
   transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
-  width: 1rem; }
-  .input-range__slider:active {
-    transform: scale(1.3); }
-  .input-range__slider:focus {
-    box-shadow: 0 0 0 5px rgba(63, 81, 181, 0.2); }
-  .input-range--disabled .input-range__slider {
-    background: #cccccc;
-    border: 1px solid #cccccc;
-    box-shadow: none;
-    transform: none; }
+  width: 1rem;
+}
+
+.input-range__slider:active {
+  transform: scale(1.3);
+}
+
+.input-range__slider:focus {
+  box-shadow: 0 0 0 5px rgba(63, 81, 181, 0.2);
+}
+
+.input-range--disabled .input-range__slider {
+  background: #ccc;
+  border: 1px solid #ccc;
+  box-shadow: none;
+  transform: none;
+}
 
 .input-range__slider-container {
-  transition: left 0.3s ease-out; }
+  transition: left 0.3s ease-out;
+}
 
 .input-range__label {
-  color: #aaaaaa;
+  color: #aaa;
   font-family: "Helvetica Neue", san-serif;
   font-size: 0.8rem;
   transform: translateZ(0);
-  white-space: nowrap; }
+  white-space: nowrap;
+}
 
 .input-range__label--min,
 .input-range__label--max {
   bottom: -1.4rem;
-  position: absolute; }
+  position: absolute;
+}
 
 .input-range__label--min {
-  left: 0; }
+  left: 0;
+}
 
 .input-range__label--max {
-  right: 0; }
+  right: 0;
+}
 
 .input-range__label--value {
   position: absolute;
-  top: -1.8rem; }
+  top: -1.8rem;
+}
 
 .input-range__label-container {
   left: -50%;
-  position: relative; }
-  .input-range__label--max .input-range__label-container {
-    left: 50%; }
+  position: relative;
+}
+
+.input-range__label--max .input-range__label-container {
+  left: 50%;
+}
 
 .input-range__track {
-  background: #eeeeee;
+  background: #eee;
   border-radius: 0.3rem;
   cursor: pointer;
   display: block;
   height: 0.3rem;
   position: relative;
-  transition: left 0.3s ease-out, width 0.3s ease-out; }
-  .input-range--disabled .input-range__track {
-    background: #eeeeee; }
+  transition: left 0.3s ease-out, width 0.3s ease-out;
+}
+
+.input-range--disabled .input-range__track {
+  background: #eee;
+}
 
 .input-range__track--background {
   left: 0;
   margin-top: -0.15rem;
   position: absolute;
   right: 0;
-  top: 50%; }
+  top: 50%;
+}
 
 .input-range__track--active {
-  background: #3f51b5; }
+  background: #3f51b5;
+}
 
 .input-range {
   height: 1rem;
   position: relative;
-  width: 100%; }
+  width: 100%;
+}
 
 /*# sourceMappingURL=index.css.map */
